persisent DB connection via hikaridb